--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -5,3 +9,6 @@
   scroll-behavior: smooth;
   font-family: "Rubik", sans-serif;
 }
+
+
+
